--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 						<a class="change_hypertext1" href="#activités">Activités</a>
 					</li>
 					<div>
-						<li class="inscrire_order  change_color">
-							<a class="last_child change_hypertext" href="">S'inscrire</a>
+						<li class="last_child inscrire_order  change_color">
+							<a class="change_hypertext" href="">S'inscrire</a>
 						</li>
 					</div>
 				</ul>
