minor change footer

--- a/index.html
+++ b/index.html
@@ -374,9 +374,9 @@
 					<h2>A propos</h2>
 				</div>
 				<ul>
-					<li><a class="Hypertext_footer" href="#">Fonctionement du site</a></li>
-					<li><a class="Hypertext_footer" href="#">Condition générales de vente</a></li>
-					<li><a class="Hypertext_footer" href="#">Données et confidentialité</a></li>
+					<li class="footer_space"><a class="Hypertext_footer" href="#">Fonctionement du site</a></li>
+					<li class="footer_space"><a class="Hypertext_footer" href="#">Condition générales de vente</a></li>
+					<li class="footer_space"><a class="Hypertext_footer" href="#">Données et confidentialité</a></li>
 				</ul>
 			</div>
 			<div class="footer_text">
@@ -384,8 +384,8 @@
 					<h2>Nos hebergements</h2>
 				</div>
 				<ul>
-					<li><a class="Hypertext_footer" href="#">Charte qualité</a></li>
-					<li><a class="Hypertext_footer" href="#">Soumetttre votre hotel</a></li>
+					<li class="footer_space"><a class="Hypertext_footer" href="#">Charte qualité</a></li>
+					<li class="footer_space"><a class="Hypertext_footer" href="#">Soumetttre votre hotel</a></li>
 				</ul>
 			</div>
 			<div class="footer_text">
@@ -393,8 +393,8 @@
 					<h2>Assistance</h2>
 				</div>
 				<ul>
-					<li><a class="Hypertext_footer" href="#">Centre d'aide</a></li>
-					<li><a class="Hypertext_footer" href="#">Nous contacter</a></li>
+					<li class="footer_space"><a class="Hypertext_footer" href="#">Centre d'aide</a></li>
+					<li class="footer_space"><a class="Hypertext_footer" href="#">Nous contacter</a></li>
 				</ul>
 			</div>
 		</div>
