--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
 		<!--article hotel hebergement à Marseille -->
 		<div id="hebergements" class="position_hebergement">
 			<section class="section_hebergements">
-				<h2 class="titre_hebergement">Hebergement à Marseille</h2>
+				<h2 class="titre_hebergement">Hébergement à Marseille</h2>
 				<div class="hotel_cannebiére">
-					<a class="lien_Hebergements" href="">
+					<a class="lien_Hebergements" href="#">
 						<div class="img_container">
 							<img class="img_cannebiére"
 								src="./hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
@@ -232,7 +232,7 @@
 
 						<div class="text_soleil_du_matin">
 							<h3 class="titre_soleil_du_matin">Hotel le soleil du matin</h3>
-							<p>nuit à partir de <b>128 €</b></p>
+							<p>Nuit à partir de <b>128 €</b></p>
 							<div class="star_position_soleil_du_matin">
 								<i id="change_color_star" class="fas fa-star"></i>
 								<i id="change_color_star" class="fas fa-star"></i>
@@ -251,7 +251,7 @@
 						</div>
 						<div class="text_soleil_du_matin">
 							<h3 class="titre_soleil_du_matin">Au coeur de l'eau Chambres d'hôtes</h3>
-							<p>nuit à partir de <b>71 €</b></p>
+							<p>Nuit à partir de <b>71 €</b></p>
 							<div class="star_position_soleil_du_matin">
 								<i id="change_color_star" class="fas fa-star"></i>
 								<i id="change_color_star" class="fas fa-star"></i>
@@ -270,7 +270,7 @@
 						</div>
 						<div class="text_soleil_du_matin">
 							<h3 class="titre_soleil_du_matin">Hôtel Tout bleu et Blanc</h3>
-							<p>nuit à partir de <b>68 €</b></p>
+							<p>Nuit à partir de <b>68 €</b></p>
 							<div class="star_position_soleil_du_matin">
 								<i id="change_color_star" class="fas fa-star"></i>
 								<i id="change_color_star" class="fas fa-star"></i>
