--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 					</li>
 					
 						<li class="inscrire_order  change_color">
-							<a class=" change_hypertext" href="#">S'inscrire</a>
+							<a class=" change_hypertext inscrire_text" href="#">S'inscrire</a>
 						</li>
 					
 				</ul>
