--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				<ul>
 					<li class="hebergement_order change_color">
 						<a class="responsive_link change_hypertext" href="#hebergements">
-							Hebergements</a
+							Hébergements</a
 						>
 					</li>
 					<li class="activités_order">
@@ -49,8 +49,8 @@
 		<main>
 			<section>
 				<div class="text_section">
-					<h1>Trouvez votre hebergement pour des vacances de reves</h1>
-					<p>en plein centre ville ou en pleine nature</p>
+					<h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+					<p>En plein centre ville ou en pleine nature</p>
 				</div>
 
 				<!--barre de recherche Header-->
@@ -118,7 +118,7 @@
 			<!--article hotel hebergement à Marseille -->
 			<div id="hebergements" class="position_hebergement">
 				<section class="section_hebergements">
-					<h2 class="titre_hebergement">Hébergement à Marseille</h2>
+					<h2 class="titre_hebergement">Hébergements à Marseille</h2>
 					<article class="hotel_cannebiére">
 						<a class="lien_Hebergements" href="#">
 							<div class="img_container">
@@ -129,8 +129,8 @@
 								/>
 							</div>
 							<div class="text_cannebiére">
-								<h3>Auberge de la cannebiére</h3>
-								<p>nuit à partir de <b>25€ </b></p>
+								<h3 class="titre_Auberge">Auberge de la Cannebiére</h3>
+								<p class="price_night">Nuit à partir de <b>25€ </b></p>
 								<i id="change_color_star" class="fas fa-star"></i>
 								<i id="change_color_star" class="fas fa-star"></i>
 								<i id="change_color_star" class="fas fa-star"></i>
@@ -150,7 +150,7 @@
 							</div>
 							<div class="text_cannebiére">
 								<h3>Hôtel du port</h3>
-								<p>nuit à partir de <b>52 €</b></p>
+								<p>Nuit à partir de <b>52 €</b></p>
 								<i id="change_color_star" class="fas fa-star"></i>
 								<i id="change_color_star" class="fas fa-star"></i>
 								<i id="change_color_star" class="fas fa-star"></i>
@@ -170,7 +170,7 @@
 							</div>
 							<div class="text_cannebiére">
 								<h3>Hôtel les mouettes</h3>
-								<p>nuit à partir de <b>76 €</b></p>
+								<p>Nuit à partir de <b>76 €</b></p>
 								<i id="change_color_star" class="fas fa-star"></i>
 								<i id="change_color_star" class="fas fa-star"></i>
 								<i id="change_color_star" class="fas fa-star"></i>
@@ -190,7 +190,7 @@
 							</div>
 							<div class="text_cannebiére">
 								<h3>Hôtel de la mer</h3>
-								<p>nuit à partir de <b>46 €</b></p>
+								<p>Nuit à partir de <b>46 €</b></p>
 								<i id="change_color_star" class="fas fa-star"></i>
 								<i id="change_color_star" class="fas fa-star"></i>
 								<i id="change_color_star" class="fas fa-star"></i>
@@ -210,7 +210,7 @@
 							</div>
 							<div class="text_cannebiére">
 								<h3>Auberge le panier</h3>
-								<p>nuit à partir de <b>23 €</b></p>
+								<p>Nuit à partir de <b>23 €</b></p>
 								<i id="change_color_star" class="fas fa-star"></i>
 								<i id="change_color_star" class="fas fa-star"></i>
 								<i id="change_color_star" class="fas fa-star"></i>
@@ -224,13 +224,13 @@
 							<div class="img_container">
 								<img
 									class="img_cannebiére"
-									src="./hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
+									src="./hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
 									alt="image auberge la cannebiére"
 								/>
 							</div>
 							<div class="text_cannebiére">
 								<h3>Hôtel chez Amina</h3>
-								<p>nuit à partir de <b>96 €</b></p>
+								<p>Nuit à partir de <b>96 €</b></p>
 								<i id="change_color_star" class="fas fa-star"></i>
 								<i id="change_color_star" class="fas fa-star"></i>
 								<i id="change_color_star" class="fas fa-star"></i>
@@ -241,10 +241,10 @@
 					</div>
 					<p> <b>Afficher plus </b></p>
 				</section>
-				<!-- article les plus populare -->
+				<!-- article Les plus populare -->
 				<section class="section_populaire">
 					<div class="titre_populaire">
-						<h2>les plus populaires</h2>
+						<h2>Les plus populaires</h2>
 						<i class="changement_populaire fas fa-chart-line"></i>
 					</div>
 
@@ -259,7 +259,7 @@
 							</div>
 
 							<div class="text_soleil_du_matin">
-								<h3 class="titre_soleil_du_matin">Hotel le soleil du matin</h3>
+								<h3 class="titre_soleil_du_matin">Hotel Le soleil du matin</h3>
 								<p>Nuit à partir de <b>128 €</b></p>
 								<div class="star_position_soleil_du_matin">
 									<i id="change_color_star" class="fas fa-star"></i>
@@ -337,7 +337,7 @@
 									/>
 								</div>
 								<div class="text_activity">
-									<b>vieux port</b>
+									<b>Vieux port</b>
 								</div>
 							</article>
 						</a>
@@ -353,7 +353,7 @@
 									/>
 								</div>
 								<div class="text_activity">
-									<b>Fort de pomégues</b>
+									<b>Fort de Pomégues</b>
 								</div>
 							</a>
 						</article>
@@ -367,7 +367,7 @@
 									/>
 								</div>
 								<div class="text_activity">
-									<b>Ile du frioul</b>
+									<b>Iles du Frioul</b>
 								</div>
 							</a>
 						</article>
@@ -383,7 +383,7 @@
 									/>
 								</div>
 								<div class="text_activity">
-									<b>Parc national des calanques</b>
+									<b>Parc National des Calanques</b>
 								</div>
 							</article>
 						</a>
@@ -399,7 +399,7 @@
 									/>
 								</div>
 								<div class="text_activity">
-									<b>Notre-dame-de-la-garde</b>
+									<b>Notre-Dame-de-la-Garde</b>
 								</div>
 							</a>
 						</article>
@@ -413,7 +413,7 @@
 									/>
 								</div>
 								<div class="text_activity">
-									<b>Parc longchamp</b>
+									<b>Parc Longchamp</b>
 								</div>
 							</a>
 						</article>
@@ -436,7 +436,7 @@
 						>
 						<li class="footer_space"
 							><a class="Hypertext_footer" href="#"
-								>Condition générales de vente</a
+								>Conditions générales de vente</a
 							></li
 						>
 						<li class="footer_space"
@@ -456,7 +456,7 @@
 						>
 						<li class="footer_space"
 							><a class="Hypertext_footer" href="#"
-								>Soumetttre votre hotel</a
+								>Soumettre votre hôtel</a
 							></li
 						>
 					</ul>
