--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 							Hébergements</a
 						>
 					</li>
+					</div>
 					<li class="activités_order">
 						<a class="responsive_link change_hypertext1" href="#activités"
 							>Activités</a
@@ -332,7 +333,7 @@
 								<div class="img_container_activity">
 									<img
 										class="big_image size_image"
-										src="./activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
+										src="./activites/2_large/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
 										alt=""
 									/>
 								</div>
@@ -348,7 +349,7 @@
 								<div class="img_container_activity">
 									<img
 										class="midle_image size_image"
-										src="activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
+										src="activites/2_large/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
 										alt=""
 									/>
 								</div>
@@ -362,7 +363,7 @@
 								<div class="img_container_activity">
 									<img
 										class="small_image size_image"
-										src="activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"
+										src="activites/2_large/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"
 										alt=""
 									/>
 								</div>
@@ -378,7 +379,7 @@
 								<div class="img_container_activity">
 									<img
 										class="big_image size_image"
-										src="./activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
+										src="./activites/2_large/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
 										alt=""
 									/>
 								</div>
@@ -394,7 +395,7 @@
 								<div class="img_container_activity">
 									<img
 										class="small_image size_image"
-										src="activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg"
+										src="activites/2_large/florian-wehde-xW9e8gdotxI-unsplash.jpg"
 										alt=""
 									/>
 								</div>
@@ -408,7 +409,7 @@
 								<div class="img_container_activity">
 									<img
 										class="midle_image size_image"
-										src="activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg"
+										src="activites/2_large/lena-paulin-wH2-EJoDcV0-unsplash.jpg"
 										alt=""
 									/>
 								</div>
