--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 	<meta charset="UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>P2_JOURDAIN</title>
+	<title>Reservia</title>
+	<link rel="icon" type="image/png" sizes="16x16" href="./logo/Reservia.svg">
 	<link rel="preconnect" href="https://fonts.gstatic.com" />
 	<link
 		href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
@@ -13,7 +14,7 @@
 	<link rel="stylesheet" href="style.css" />
 	<script src="https://kit.fontawesome.com/4fa80a1b2e.js" crossorigin="anonymous"></script>
 	<link href="/chemin-vers-fontawesome/css/all.css" rel="stylesheet" />
-	<title>reservia</title>
+	
 </head>
 
 <body>
@@ -35,7 +36,7 @@
 				</ul>
 
 			</nav>
-
+          
 			<a class="inscrire_order change_color change_hypertext inscrire_text" href="#">S'inscrire</a>
 		</div>
 	</header>
