--- a/index.html
+++ b/index.html
@@ -22,22 +22,24 @@
 	<header>
 		<!--menu nav header-->
 		<div class="container_navbar">
-			<img class="logo-header" src="./logo/Reservia.svg" alt="logo_Header" />
 			<nav>
 				<!--add links-->
+				<h1 >
+					<img class="logo-header" src="./logo/Reservia.svg" alt="logo_Header" />
+				</h1>
 				<ul class="nav_bar">
 					<li class="hebergement_order change_color">
-						<a class="responsive_link change_hypertext" href="#hebergements">
+						<a class="responsive_link change_hypertext change_color" href="#hebergements">
 							Hébergements</a>
 					</li>
-					<li class="activités_order">
+					<li class="activites_order">
 						<a class="responsive_link change_hypertext1" href="#activités">Activités</a>
 					</li>
 				</ul>
+				<a class="inscrire_order change_color change_hypertext inscrire_text" href="#">S'inscrire</a>
 
 			</nav>
           
-			<a class="inscrire_order change_color change_hypertext inscrire_text" href="#">S'inscrire</a>
 		</div>
 	</header>
 	<!--Section -->
