Modif Margin Body

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 		</header>
 		<!--Section -->
 		<main>
-			<section>
+			<section class="global_section_research">
 				<div class="text_section">
 					<h1>Trouvez votre hébergement pour des vacances de rêve</h1>
 					<p>En plein centre ville ou en pleine nature</p>
@@ -338,7 +338,7 @@
 				</section>
 				<!-- position grande activités -->
 			</div>
-			<section>
+			<section class="big-position_activity">
 				<h2 id="activités" class="titre_hebergement_activité"
 					>Activités à Marseille</h2
 				>
@@ -355,7 +355,7 @@
 									/>
 								</div>
 								<div class="text_activity">
-									<b>Vieux port</b>
+									<h3>Vieux port</h3>
 								</div>
 							</article>
 						</a>
@@ -371,7 +371,7 @@
 									/>
 								</div>
 								<div class="text_activity">
-									<b>Fort de Pomégues</b>
+									<h3>Fort de Pomégues</h3>
 								</div>
 							</a>
 						</article>
@@ -385,7 +385,7 @@
 									/>
 								</div>
 								<div class="text_activity">
-									<b>Iles du Frioul</b>
+									<h3>Iles du Frioul</h3>
 								</div>
 							</a>
 						</article>
@@ -401,7 +401,7 @@
 									/>
 								</div>
 								<div class="text_activity">
-									<b>Parc National des Calanques</b>
+									<h3>Parc National des Calanques</h3>
 								</div>
 							</article>
 						</a>
@@ -417,7 +417,7 @@
 									/>
 								</div>
 								<div class="text_activity">
-									<b>Notre-Dame-de-la-Garde</b>
+									<h3>Notre-Dame-de-la-Garde</h3>
 								</div>
 							</a>
 						</article>
@@ -431,7 +431,7 @@
 									/>
 								</div>
 								<div class="text_activity">
-									<b>Parc Longchamp</b>
+									<h3>Parc Longchamp</h3>
 								</div>
 							</a>
 						</article>
