--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
 										alt="image vieux port"
 									/>
 								</div>
-								<div class="text_activity">
+								<div class=" Text_activity_vieuxport">
 									<h3>Vieux port</h3>
 								</div>
 							</article>
