--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 						</li>
 					</ul>
 					<a
-						class="inscrire_order change_color change_hypertext inscrire_text"
+						class="inscrire_order change_color inscrire_text"
 						href="#"
 						>S'inscrire</a
 					>
@@ -65,7 +65,7 @@
 		<main>
 			<section class="global_section_research">
 				<div class="text_section">
-					<h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+					<h2 class="text_section--research">Trouvez votre hébergement pour des vacances de rêve</h2>
 					<p>En plein centre ville ou en pleine nature</p>
 				</div>
 
@@ -153,7 +153,7 @@
 								<i id="change_color_star" class="fas fa-star"></i>
 								<i id="change_color_star" class="fas fa-star"></i>
 								<i id="change_color_star" class="fas fa-star"></i>
-								<i class="far fa-star"></i>
+								<i id="change_color_star_grey" class="fas fa-star"></i>
 							</div>
 						</a>
 					</article>
@@ -193,7 +193,7 @@
 								<i id="change_color_star" class="fas fa-star"></i>
 								<i id="change_color_star" class="fas fa-star"></i>
 								<i id="change_color_star" class="fas fa-star"></i>
-								<i class="far fa-star"></i>
+								<i id="change_color_star_grey" class="fas fa-star"></i>
 							</div>
 						</a>
 					</article>
@@ -212,8 +212,8 @@
 								<i id="change_color_star" class="fas fa-star"></i>
 								<i id="change_color_star" class="fas fa-star"></i>
 								<i id="change_color_star" class="fas fa-star"></i>
-								<i class="far fa-star"></i>
-								<i class="far fa-star"></i>
+								<i id="change_color_star_grey" class="fas fa-star"></i>
+								<i id="change_color_star_grey" class="fas fa-star"></i>
 							</div>
 						</a>
 					</article>
@@ -233,7 +233,7 @@
 								<i id="change_color_star" class="fas fa-star"></i>
 								<i id="change_color_star" class="fas fa-star"></i>
 								<i id="change_color_star" class="fas fa-star"></i>
-								<i class="far fa-star"></i>
+								<i id="change_color_star_grey" class="fas fa-star"></i>
 							</div>
 						</a>
 					</article>
@@ -308,7 +308,7 @@
 									<i id="change_color_star" class="fas fa-star"></i>
 									<i id="change_color_star" class="fas fa-star"></i>
 									<i id="change_color_star" class="fas fa-star"></i>
-									<i class="far fa-star"></i>
+									<i id="change_color_star_grey" class="fas fa-star"></i>
 								</div>
 							</div>
 						</a>
@@ -330,7 +330,7 @@
 									<i id="change_color_star" class="fas fa-star"></i>
 									<i id="change_color_star" class="fas fa-star"></i>
 									<i id="change_color_star" class="fas fa-star"></i>
-									<i class="far fa-star"></i>
+									<i id="change_color_star_grey" class="fas fa-star"></i>
 								</div>
 							</div>
 						</a>
@@ -354,7 +354,7 @@
 										alt="image vieux port"
 									/>
 								</div>
-								<div class=" Text_activity_vieuxport">
+								<div class=" text_activity_port text_activity">
 									<h3>Vieux port</h3>
 								</div>
 							</article>
