--- a/index.html
+++ b/index.html
@@ -87,11 +87,8 @@
 				</form>
 
 				<!--Display_filtre-->
-				<ul class="display_filtre">
-					<div class="position_filter">
-						<b>Filtres</b>
-					</div>
-					<div class="position_button">
+				<ul class="display_filtre position_button">
+					<b class="position_filter">Filtres</b>
 						<li class="spacing_filter">
 							<button class="button_filter">
 								<div class="circle_filter">
@@ -124,7 +121,6 @@
 								<b>Animaux autorisés</b>
 							</button>
 						</li>
-					</div>
 				</ul>
 				<div class="number_logements">
 					<i class="icon_logements fas fa-info"></i>
