--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
 				<!--Display_filtre-->
 				<ul class="display_filtre position_button">
-					<b class="position_filter">Filtres</b>
+					<li class="position_filter"> <b> Filtres </b></li>
 						<li class="spacing_filter">
 							<button class="button_filter">
 								<div class="circle_filter">
