Modification pour vérificateur WC3

--- a/index.html
+++ b/index.html
@@ -52,9 +52,7 @@
 							>
 						</li>
 					</ul>
-					<a
-						class="inscrire_order change_color inscrire_text"
-						href="#"
+					<a class="inscrire_order change_color inscrire_text" href="#"
 						>S'inscrire</a
 					>
 				</nav>
@@ -64,10 +62,11 @@
 		<main>
 			<section class="global_section_research">
 				<div class="text_section">
-					<h2 class="text_section--research">Trouvez votre hébergement pour des vacances de rêve</h2>
+					<h2 class="text_section--research"
+						>Trouvez votre hébergement pour des vacances de rêve</h2
+					>
 					<p>En plein centre ville ou en pleine nature</p>
 				</div>
-
 				<!--barre de recherche Header-->
 				<form class="barre_recherche" method="post" action="....">
 					<button class="button_researsch_left">
@@ -85,10 +84,12 @@
 						<i class="display_loupe fas fa-search"></i>
 					</button>
 				</form>
-
-				<!--Display_filtre-->
-				<ul class="display_filtre position_button">
-					<li class="position_filter"> <b> Filtres </b></li>
+				<!--display filtre-->
+				<ul class="display_filtre">
+					<div class="position_filter">
+						<b>Filtres</b>
+					</div>
+					<div class="position_button">
 						<li class="spacing_filter">
 							<button class="button_filter">
 								<div class="circle_filter">
@@ -121,6 +122,7 @@
 								<b>Animaux autorisés</b>
 							</button>
 						</li>
+					</div>
 				</ul>
 				<div class="number_logements">
 					<i class="icon_logements fas fa-info"></i>
@@ -348,7 +350,7 @@
 										alt="image vieux port"
 									/>
 								</div>
-								<div class=" text_activity_port text_activity">
+								<div class="text_activity_port text_activity">
 									<h3>Vieux port</h3>
 								</div>
 							</article>
