--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
 				</form>
 				<!--display filtre-->
 				<ul class="display_filtre">
-					<div class="position_filter">
+					<li class="position_filter">
 						<b>Filtres</b>
-					</div>
-					<div class="position_button">
+					</li>
+					<ul class="position_button">
 						<li class="spacing_filter">
 							<button class="button_filter">
 								<div class="circle_filter">
@@ -122,7 +122,7 @@
 								<b>Animaux autorisés</b>
 							</button>
 						</li>
-					</div>
+					</ul>
 				</ul>
 				<div class="number_logements">
 					<i class="icon_logements fas fa-info"></i>
