--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 					</button>
 				</form>
 				<!--display filtre-->
-				<ul class="display_filtre">
+				<div class="display_filtre">
 					<li class="position_filter">
 						<b>Filtres</b>
 					</li>
@@ -123,7 +123,7 @@
 							</button>
 						</li>
 					</ul>
-				</ul>
+				</div>
 				<div class="number_logements">
 					<i class="icon_logements fas fa-info"></i>
 					<p> plus de 500 logements sont disponible dans cette ville</p>
