--- a/index.html
+++ b/index.html
@@ -79,46 +79,44 @@
 						name="recherche"
 						placeholder="Marseille,France"
 					/>
-					<button class="button_researsch_right">rechercher</button>
-					<button class="buttton_researsh_loupe">
-						<i class="display_loupe fas fa-search"></i>
-					</button>
+					<button class="button_researsch_right fas "></button>
+					
 				</form>
 				<!--display filtre-->
 				<div class="display_filtre">
-					<li class="position_filter">
+					<div class="position_filter">
 						<b>Filtres</b>
-					</li>
+					</div>
 					<ul class="position_button">
 						<li class="spacing_filter">
 							<button class="button_filter">
-								<div class="circle_filter">
+								<li class="circle_filter">
 									<i class="icon_filter fas fa-money-bill-wave"></i>
-								</div>
+								</li>
 								<b> Economique</b>
 							</button>
 						</li>
 						<li class="spacing_filter">
 							<button class="button_filter">
-								<div class="circle_filter">
+								<li class="circle_filter">
 									<i class="icon_filter fas fa-child"></i>
-								</div>
+								</li>
 								<b>Familial </b>
 							</button>
 						</li>
 						<li class="spacing_filter">
 							<button class="romatique button_filter">
-								<div class="circle_filter">
+								<li class="circle_filter">
 									<i class="icon_filter fas fa-heart"></i>
-								</div>
+								</li>
 								<b>Romantique</b>
 							</button>
 						</li>
 						<li class="spacing_filter">
 							<button class="button_filter">
-								<div class="circle_filter">
+								<li class="circle_filter">
 									<i class="icon_filter fas fa-dog"></i>
-								</div>
+								</li>
 								<b>Animaux autorisés</b>
 							</button>
 						</li>
