--- a/index.html
+++ b/index.html
@@ -90,33 +90,33 @@
 					<ul class="position_button">
 						<li class="spacing_filter">
 							<button class="button_filter">
-								<div class="circle_filter">
+								<span class="circle_filter">
 									<i class="icon_filter fas fa-money-bill-wave"></i>
-								</div>
+								</span>
 								<b> Economique</b>
 							</button>
 						</li>
 						<li class="spacing_filter">
 							<button class="button_filter">
-								<div class="circle_filter">
+								<span class="circle_filter">
 									<i class="icon_filter fas fa-child"></i>
-								</div>
+								</span>
 								<b>Familial </b>
 							</button>
 						</li>
 						<li class="spacing_filter">
 							<button class="romatique button_filter">
-								<div class="circle_filter">
+								<span class="circle_filter">
 									<i class="icon_filter fas fa-heart"></i>
-								</div>
+								</span>
 								<b>Romantique</b>
 							</button>
 						</li>
 						<li class="spacing_filter">
 							<button class="button_filter">
-								<div class="circle_filter">
+								<span class="circle_filter">
 									<i class="icon_filter fas fa-dog"></i>
-								</div>
+								</span>
 								<b>Animaux autorisés</b>
 							</button>
 						</li>
