--- a/index.html
+++ b/index.html
@@ -1,26 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 	<head>
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Reservia</title>
-		<link
-			rel="icon"
-			type="image/png"
-			sizes="16x16"
-			href="./logo/Reservia.svg"
-		/>
+		<link rel="icon" type="image/png" sizes="16x16" href="./logo/Reservia.svg" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" />
-		<link
-			href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-			rel="stylesheet"
-		/>
+		<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet" />
 		<link rel="stylesheet" href="style.css" />
-		<script
-			src="https://kit.fontawesome.com/4fa80a1b2e.js"
-			crossorigin="anonymous"
-		></script>
+		<script src="https://kit.fontawesome.com/4fa80a1b2e.js" crossorigin="anonymous"></script>
 	</head>
 
 	<body>
@@ -31,30 +20,17 @@
 				<nav>
 					<!--add links-->
 					<h1>
-						<img
-							class="logo-header"
-							src="./images/logo/Reservia.svg"
-							alt="logo_Header"
-						/>
+						<img class="logo-header" src="./images/logo/Reservia.svg" alt="logo_Header" />
 					</h1>
 					<ul class="nav_bar">
 						<li class="hebergement_order change_color">
-							<a
-								class="responsive_link change_hypertext change_color"
-								href="#hebergements"
-							>
-								Hébergements</a
-							>
+							<a class="responsive_link change_hypertext change_color" href="#hebergements"> Hébergements</a>
 						</li>
 						<li class="activites_order">
-							<a class="responsive_link change_hypertext1" href="#activités"
-								>Activités</a
-							>
+							<a class="responsive_link change_hypertext1" href="#activités">Activités</a>
 						</li>
 					</ul>
-					<a class="inscrire_order change_color inscrire_text" href="#"
-						>S'inscrire</a
-					>
+					<a class="inscrire_order change_color inscrire_text" href="#">S'inscrire</a>
 				</nav>
 			</div>
 		</header>
@@ -62,25 +38,16 @@
 		<main>
 			<section class="global_section_research">
 				<div class="text_section">
-					<h2 class="text_section--research"
-						>Trouvez votre hébergement pour des vacances de rêve</h2
-					>
+					<h2 class="text_section--research">Trouvez votre hébergement pour des vacances de rêve</h2>
 					<p>En plein centre ville ou en pleine nature</p>
 				</div>
 				<!--barre de recherche Header-->
 				<form class="barre_recherche" method="post" action="....">
-					<button class="button_researsch_left">
+					<button class="button_research_left">
 						<i class="fas fa-map-marker-alt"></i>
 					</button>
-					<input
-						class="input_researsch"
-						type="text"
-						id="recherche"
-						name="recherche"
-						placeholder="Marseille,France"
-					/>
-					<button class="button_researsch_right fas "></button>
-					
+					<input class="input_research" type="text" id="recherche" name="recherche" placeholder="Marseille,France" />
+					<button class="button_research_right fas"></button>
 				</form>
 				<!--display filtre-->
 				<div class="display_filtre">
@@ -131,17 +98,13 @@
 			<div id="hebergements" class="position_hebergement">
 				<section class="section_hebergements">
 					<h2 class="titre_hebergement">Hébergements à Marseille</h2>
-					<article class="hotel_cannebiére">
+					<article class="hotel_hebergements">
 						<a class="lien_Hebergements" href="#">
 							<div class="img_container">
-								<img
-									class="img_cannebiére"
-									src="./images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
-									alt="image auberge de la cannebiére"
-								/>
+								<img class="img_hebergements" src="./images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="image auberge de la cannebiére" />
 							</div>
-							<div class="text_cannebiére">
-								<h3 class="titre_Auberge">Auberge de la Cannebiére</h3>
+							<div class="text_hebergements">
+								<h3 class="titre_hotel">Auberge de la Cannebiére</h3>
 								<p class="price_night">Nuit à partir de <b>25€ </b></p>
 								<i class="change_color_star fas fa-star"></i>
 								<i class="change_color_star fas fa-star"></i>
@@ -151,17 +114,13 @@
 							</div>
 						</a>
 					</article>
-					<article class="hotel_cannebiére">
+					<article class="hotel_hebergements">
 						<a class="lien_Hebergements" href="#">
 							<div class="img_container">
-								<img
-									class="img_cannebiére"
-									src="./images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
-									alt="Image Hotel du port"
-								/>
+								<img class="img_hebergements" src="./images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Image Hotel du port" />
 							</div>
-							<div class="text_cannebiére">
-								<h3 class="titre_Auberge">Hôtel du port</h3>
+							<div class="text_hebergements">
+								<h3 class="titre_hotel">Hôtel du port</h3>
 								<p class="price_night">Nuit à partir de <b>52 €</b></p>
 								<i class="change_color_star fas fa-star"></i>
 								<i class="change_color_star fas fa-star"></i>
@@ -171,17 +130,13 @@
 							</div>
 						</a>
 					</article>
-					<article class="hotel_cannebiére">
+					<article class="hotel_hebergements">
 						<a class="lien_Hebergements" href="#">
 							<div class="img_container">
-								<img
-									class="img_cannebiére"
-									src="./images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg"
-									alt="image Hotel les mouettes"
-								/>
+								<img class="img_hebergements" src="./images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="image Hotel les mouettes" />
 							</div>
-							<div class="text_cannebiére">
-								<h3 class="titre_Auberge">Hôtel les mouettes</h3>
+							<div class="text_hebergements">
+								<h3 class="titre_hotel">Hôtel les mouettes</h3>
 								<p class="price_night">Nuit à partir de <b>76 €</b></p>
 								<i class="change_color_star fas fa-star"></i>
 								<i class="change_color_star fas fa-star"></i>
@@ -191,17 +146,13 @@
 							</div>
 						</a>
 					</article>
-					<article class="hotel_cannebiére">
+					<article class="hotel_hebergements">
 						<a class="lien_Hebergements" href="#">
 							<div class="img_container">
-								<img
-									class="img_cannebiére"
-									src="./images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
-									alt="image Hotel de la mer"
-								/>
+								<img class="img_hebergements" src="./images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="image Hotel de la mer" />
 							</div>
-							<div class="text_cannebiére">
-								<h3 class="titre_Auberge">Hôtel de la mer</h3>
+							<div class="text_hebergements">
+								<h3 class="titre_hotel">Hôtel de la mer</h3>
 								<p class="price_night">Nuit à partir de <b>46 €</b></p>
 								<i class="change_color_star fas fa-star"></i>
 								<i class="change_color_star fas fa-star"></i>
@@ -211,17 +162,13 @@
 							</div>
 						</a>
 					</article>
-					<article class="hotel_cannebiére">
+					<article class="hotel_hebergements">
 						<a class="lien_Hebergements" href="#">
 							<div class="img_container">
-								<img
-									class="img_cannebiére"
-									src="./images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
-									alt="image Auberge le panier"
-								/>
+								<img class="img_hebergements" src="./images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="image Auberge le panier" />
 							</div>
-							<div class="text_cannebiére">
-								<h3 class="titre_Auberge">Auberge le panier</h3>
+							<div class="text_hebergements">
+								<h3 class="titre_hotel">Auberge le panier</h3>
 								<p class="price_night">Nuit à partir de <b>23 €</b></p>
 								<i class="change_color_star fas fa-star"></i>
 								<i class="change_color_star fas fa-star"></i>
@@ -231,17 +178,13 @@
 							</div>
 						</a>
 					</article>
-					<article class="hotel_cannebiére">
+					<article class="hotel_hebergements">
 						<a class="lien_Hebergements" href="#">
 							<div class="img_container">
-								<img
-									class="img_cannebiére"
-									src="./images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
-									alt="image Hotel chez Amina"
-								/>
+								<img class="img_hebergements" src="./images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="image Hotel chez Amina" />
 							</div>
-							<div class="text_cannebiére">
-								<h3 class="titre_Auberge">Hôtel chez Amina</h3>
+							<div class="text_hebergements">
+								<h3 class="titre_hotel">Hôtel chez Amina</h3>
 								<p class="price_night">Nuit à partir de <b>96 €</b></p>
 								<i class="change_color_star fas fa-star"></i>
 								<i class="change_color_star fas fa-star"></i>
@@ -263,11 +206,7 @@
 					<article class="hotel_populaires">
 						<a class="lien_Hebergements_pop" href="#">
 							<div class="img_container_populaire">
-								<img
-									class="img_soleil_du_matin"
-									src="./images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
-									alt="image Hotel le soleil du matin"
-								/>
+								<img class="img_soleil_du_matin" src="./images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="image Hotel le soleil du matin" />
 							</div>
 
 							<div class="text_soleil_du_matin">
@@ -286,16 +225,10 @@
 					<article class="hotel_populaires">
 						<a class="lien_Hebergements_pop" href="#">
 							<div class="img_container_populaire">
-								<img
-									class="img_eau"
-									src="./images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"
-									alt="image au coeur de l'eau chambre d'hotes"
-								/>
+								<img class="img_eau" src="./images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="image au coeur de l'eau chambre d'hotes" />
 							</div>
 							<div class="text_soleil_du_matin">
-								<h3 class="titre_soleil_du_matin"
-									>Au coeur de l'eau Chambres d'hôtes</h3
-								>
+								<h3 class="titre_soleil_du_matin">Au coeur de l'eau Chambres d'hôtes</h3>
 								<p>Nuit à partir de <b>71 €</b></p>
 								<div class="star_position_soleil_du_matin">
 									<i class="change_color_star fas fa-star"></i>
@@ -310,11 +243,7 @@
 					<article class="hotel_populaires">
 						<a class="lien_Hebergements_pop" href="#">
 							<div class="img_container_populaire">
-								<img
-									class="img_blanc"
-									src="./images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
-									alt=" image Hotel Tout bleu et Blanc"
-								/>
+								<img class="img_blanc" src="./images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt=" image Hotel Tout bleu et Blanc" />
 							</div>
 							<div class="text_soleil_du_matin">
 								<h3 class="titre_soleil_du_matin">Hôtel Tout bleu et Blanc</h3>
@@ -333,20 +262,14 @@
 				<!-- position grande activités -->
 			</div>
 			<section class="big-position_activity">
-				<h2 id="activités" class="titre_hebergement_activité"
-					>Activités à Marseille</h2
-				>
+				<h2 id="activités" class="titre_hebergement_activité">Activités à Marseille</h2>
 
 				<div class="global_position_activity">
 					<div class="column">
 						<a class="lien_Hebergements" href="#">
 							<article class="container_text_image_activity">
 								<div class="img_container_activity">
-									<img
-										class="big_image size_image"
-										src="./images/activites/2_large/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
-										alt="image vieux port"
-									/>
+									<img class="big_image size_image" src="./images/activites/2_large/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="image vieux port" />
 								</div>
 								<div class="text_activity_port text_activity">
 									<h3>Vieux port</h3>
@@ -358,11 +281,7 @@
 						<article class="container_text_image_activity">
 							<a class="lien_Hebergements" href="#">
 								<div class="img_container_activity">
-									<img
-										class="midle_image size_image"
-										src="./images/activites/2_large/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
-										alt="image Fort de Pomégues"
-									/>
+									<img class="midle_image size_image" src="./images/activites/2_large/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="image Fort de Pomégues" />
 								</div>
 								<div class="text_activity">
 									<h3>Fort de Pomégues</h3>
@@ -372,11 +291,7 @@
 						<article class="container_text_image_activity">
 							<a class="lien_Hebergements" href="#">
 								<div class="img_container_activity">
-									<img
-										class="small_image size_image"
-										src="./images/activites/2_large/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"
-										alt="image Iles du Frioul"
-									/>
+									<img class="small_image size_image" src="./images/activites/2_large/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="image Iles du Frioul" />
 								</div>
 								<div class="text_activity">
 									<h3>Iles du Frioul</h3>
@@ -388,11 +303,7 @@
 						<a class="lien_Hebergements" href="#">
 							<article class="container_text_image_activity">
 								<div class="img_container_activity">
-									<img
-										class="big_image size_image"
-										src="./images/activites/2_large/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
-										alt="image Parc National des Calanques"
-									/>
+									<img class="big_image size_image" src="./images/activites/2_large/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="image Parc National des Calanques" />
 								</div>
 								<div class="text_activity">
 									<h3>Parc National des Calanques</h3>
@@ -404,11 +315,7 @@
 						<article class="container_text_image_activity">
 							<a class="lien_Hebergements" href="#">
 								<div class="img_container_activity">
-									<img
-										class="small_image size_image"
-										src="./images/activites/2_large/florian-wehde-xW9e8gdotxI-unsplash.jpg"
-										alt="image Notre-Dame-de-la-Garde"
-									/>
+									<img class="small_image size_image" src="./images/activites/2_large/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="image Notre-Dame-de-la-Garde" />
 								</div>
 								<div class="text_activity">
 									<h3>Notre-Dame-de-la-Garde</h3>
@@ -418,11 +325,7 @@
 						<article class="container_text_image_activity">
 							<a class="lien_Hebergements" href="#">
 								<div class="img_container_activity">
-									<img
-										class="midle_image size_image"
-										src="./images/activites/2_large/lena-paulin-wH2-EJoDcV0-unsplash.jpg"
-										alt="image Parc Longchamp"
-									/>
+									<img class="midle_image size_image" src="./images/activites/2_large/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="image Parc Longchamp" />
 								</div>
 								<div class="text_activity">
 									<h3>Parc Longchamp</h3>
@@ -441,21 +344,9 @@
 						<h2>A propos</h2>
 					</div>
 					<ul>
-						<li class="footer_space"
-							><a class="Hypertext_footer" href="#"
-								>Fonctionement du site</a
-							></li
-						>
-						<li class="footer_space"
-							><a class="Hypertext_footer" href="#"
-								>Conditions générales de vente</a
-							></li
-						>
-						<li class="footer_space"
-							><a class="Hypertext_footer" href="#"
-								>Données et confidentialité</a
-							></li
-						>
+						<li class="footer_space"><a class="Hypertext_footer" href="#">Fonctionement du site</a></li>
+						<li class="footer_space"><a class="Hypertext_footer" href="#">Conditions générales de vente</a></li>
+						<li class="footer_space"><a class="Hypertext_footer" href="#">Données et confidentialité</a></li>
 					</ul>
 				</div>
 				<div class="footer_text">
@@ -463,14 +354,8 @@
 						<h2>Nos hebergements</h2>
 					</div>
 					<ul>
-						<li class="footer_space"
-							><a class="Hypertext_footer" href="#">Charte qualité</a></li
-						>
-						<li class="footer_space"
-							><a class="Hypertext_footer" href="#"
-								>Soumettre votre hôtel</a
-							></li
-						>
+						<li class="footer_space"><a class="Hypertext_footer" href="#">Charte qualité</a></li>
+						<li class="footer_space"><a class="Hypertext_footer" href="#">Soumettre votre hôtel</a></li>
 					</ul>
 				</div>
 				<div class="footer_text">
@@ -478,12 +363,8 @@
 						<h2>Assistance</h2>
 					</div>
 					<ul>
-						<li class="footer_space"
-							><a class="Hypertext_footer" href="#">Centre d'aide</a></li
-						>
-						<li class="footer_space"
-							><a class="Hypertext_footer" href="#">Nous contacter</a></li
-						>
+						<li class="footer_space"><a class="Hypertext_footer" href="#">Centre d'aide</a></li>
+						<li class="footer_space"><a class="Hypertext_footer" href="#">Nous contacter</a></li>
 					</ul>
 				</div>
 			</div>
